Changelog
=========

7.2-dev - (unreleased)
----------------------
* Change: Remove dependency to cornerstone.feed.zope
  [szabozo0 refs #14323]

7.1 - (2013-08-07)
------------------
* Bugfix: no longer compute possible relation for every forward or backward
  relation when retriving the auto relation of non canonical objects
  [ichimdav refs #14863]
* Feature: added a plone.app.contentrules action to enable/disable
  discussions based on rules
  [tiberich #14858]
* Feature: Plone 4.3 compatibility
    - removed 3rd party syndication products (bda.feed, Products.fatsyndication)
    - removed eea.rdfrepository
    - added custom RSS2 feed using standard Plone 4.3 syndication framework
    - [batradav refs #14323]

7.0 - (2013-07-25)
------------------
* Feature: removed p4a.video dependency
  [ichimdav #15234]
* WIP: added a plone.app.contentrules action to enable/disable
  discussions based on rules
  [tiberich #14858]
* Bug fix: added adapter registration implementing IFeed for ICollection
  types, fixes /RSS2 view for feeds
  [tiberich #14915]
* Cleanup: Deprecated p4a.subtyper and remove hard dependency on it (
  is optional now and it will be removed in a later version of this pacakge)
  [voineali refs #15234]
* Bug fix: implemented a field2surf adapter for fields named 'provenances'.
  This applies to DavizVisualization's @@rdf view.
  [tiberich #14824]
* Upgrade Step: in
  http://www.eea.europa.eu/aq_parent/portal_properties/rdfmarshaller_properties
  remove the "provenances" field from the "blacklist" list.
  [tiberich #14824]

6.9 - (2013-07-08)
------------------
* Bug fix: fixed duplication of auto relations when retriving them from a non
  canonical object
  [ichimdav refs #14831]

6.8 - (2013-06-17)
------------------
* Feature: added ManagementPlanField for content described in the ticket, such
  as IInteractiveData and IInteractiveMap
  [ichimdav #14719]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on